  * Fixes bug where clicking on the current song would switch to the library 
    but the button on the top would not be selected.
  * Adds missing icon for "copy magnet" on Send file dialog.
  * Library explorer and Playlist explorer are now divided by a split pane
    for a better experience.
  * Hides hints popup when search is triggered with a mouse click.
  
-- FrostWire Team <contact@frostwire.com>  Fri, 10 Feb 2012 18:25:12 -0500

frostwire (5.3.0) stable; urgency=high
  * Search form looks similar to FrostWire 4 but now allows user to search
    for more than one file type at once.
  * Improvements in search algorithm.
  * Send file/folder feature more effective between just 2 peers.
  * Simplification of search form interface, looks similar to FrostWire 4
  * Phone & Tablets tab is gone, integration with Android devices is now
    part of the Library under a "Devices" tree item.
  * Browses, Streams audio, and downloads files made public by Android devices
    in the same network.
  * When entering a search hints are shown to type less (powered by Google).
  * Sorts transfers by "Seeds" correctly.
  * Improvements on Library action buttons, now a "Launch" action is available
    and buttons are shown/hidden depending on context.
  * Fixes bugs where files on a audio playlist could not be dragged out.
  * Fixes bugs where deleted files would still appear on the library.
  * When right clicking on selected finished transfers and copying an infohash
    you won't end up with a trailing newline on the clipboard.
  * Sharing ratio of a torrent that you stopped and started seeding again
    will not be infinite and will be based on the total sizes of the files
    being shared.
  * Now when the transfer split pane is dragged up, the pane border is painted
    correctly on top of the image overlay.
  * Fixes repainting glitch when moving split pane on top of promotional
    graphic.
  * Lots of icons have been revamped for a more uniform look.